<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/location1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#800080"
        android:gravity="center"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location1"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".OfficialActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000">

            <TextView
                android:id="@+id/office"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="10dp"
                android:text="@string/office"
                android:minWidth="150dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/official_image"
                app:layout_constraintTop_toBottomOf="@+id/official_name" />

            <TextView
                android:id="@+id/official_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="10dp"
                android:text="@string/official_name"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/official_image"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/official_image"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="50dp"
                android:contentDescription="@string/official_photo"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/missing"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/dem_party_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="-30dp"
                android:layout_marginLeft="200dp"
                android:contentDescription="@string/logo"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_image"
                app:srcCompat="@drawable/dem_logo"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/rep_party_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="-30dp"
                android:layout_marginLeft="200dp"
                android:contentDescription="@string/logo"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_image"
                app:srcCompat="@drawable/rep_logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/official_address"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline8" />

            <TextView
                android:id="@+id/official_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/address_detail"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/address_label" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/official_phone"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_address" />

            <TextView
                android:id="@+id/official_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/phone_detail"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/phone_label" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/official_email"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_phone" />

            <TextView
                android:id="@+id/official_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/email_detail"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/email_label" />

            <TextView
                android:id="@+id/website_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/official_website"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_email" />

            <TextView
                android:id="@+id/official_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/website_url"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/website_label" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/facebook"
                android:onClick="facebookClicked"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/party_name"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/twitter"
                android:onClick="twitterClicked"
                app:layout_constraintStart_toEndOf="@+id/facebook"
                app:layout_constraintTop_toBottomOf="@+id/party_name"
                app:srcCompat="@drawable/twitter"
                tools:ignore="ImageContrastCheck" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.20" />

            <ImageView
                android:id="@+id/youtube"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="124dp"
                android:contentDescription="@string/youtube"
                android:onClick="youTubeClicked"
                app:layout_constraintStart_toEndOf="@+id/twitter"
                app:layout_constraintTop_toBottomOf="@+id/party_name"
                app:srcCompat="@drawable/youtube" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.80" />

            <TextView
                android:id="@+id/party_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="38dp"
                android:text="@string/party_name"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/office" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="144dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.40" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>