<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/positionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:gravity="start"
        android:text="@string/position"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#280650"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toEndOf="@+id/officialImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namePartyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:gravity="start"
        android:text="@string/name_party"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#280650"
        app:layout_constraintBottom_toTopOf="@+id/official_image"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/officialImageView"
        app:layout_constraintTop_toBottomOf="@+id/positionTextView" />

    <ImageView
        android:id="@+id/official_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePartyTextView"
        app:srcCompat="@drawable/separator" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <ImageView
        android:id="@+id/officialImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/missing"
        tools:layout_editor_absoluteY="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>